Update eslint and formats

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     },
     "homepage": "https://github.com/jevmydev/reto-100-dias#readme",
     "devDependencies": {
-        "eslint": "9.10.0",
         "eslint-config-prettier": "9.1.0",
         "prettier": "3.3.3"
+    },
+    "dependencies": {
+        "eslint": "8.35.0"
     }
 }
