Update version and eliminate caret

--- a/02-escala-de-notas/package.json
+++ b/02-escala-de-notas/package.json
@@ -1,7 +1,7 @@
 {
     "name": "02-escala-de-notas",
     "private": true,
-    "version": "0.0.1",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -11,7 +11,7 @@
     "dependencies": {
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "uuid": "^10.0.0"
+        "uuid": "10.0.0"
     },
     "devDependencies": {
         "@types/react": "18.3.3",
